[package]
name = "communication_server"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
assembler = { git = "https://github.com/Rustastic/Assembler.git"}
messages = { git = "https://github.com/Rustastic/Messages.git"}
source_routing = { git = "https://github.com/Rustastic/source_routing.git"}
crossbeam-channel = "0.5.13"
toml = "0.8.19"
rand = "0.8.0"
colored = "3"
log = "0.4"

